fix(head.liquid): add defer attribute to Ably script tag

--- a/snippets/head.liquid
+++ b/snippets/head.liquid
@@ -156,7 +156,7 @@
 
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" defer></script>
-<script src="https://cdn.ablyft.com/s/67024591.js"></script>
+<script src="https://cdn.ablyft.com/s/67024591.js" defer></script>
 <!-- Start Intelligems -->
 <script>
   window.Shopify = window.Shopify || { theme: { id: {{ theme.id }}, role: '{{ theme.role }}' } };
