init with live theme copy

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -35,7 +35,7 @@ NOTE TO DEVELOPERS: welcome to Focal theme! We hope that you will enjoy editing 
 
     {{ content_for_header }}
     
-  
+      <meta name="google-site-verification" content="Ni670diFqYVeuz4gQWQ2vtiUzYkE8pXXWkyU-FuCOdc" />
   {% include 'pagefly-app-header' %}</head>
   
   <body class="no-focus-outline {{ feature_classes }}" data-instant-allow-query-string>
